--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -9,9 +9,12 @@
 	
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/demo.css" />
-	<link rel="stylesheet" type="text/css" href="css/component.css" />
-	<script src="js/modernizr-custom.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<!--<link rel="stylesheet" type="text/css" href="css/component.css" />-->
+
+    <script src="js/modernizr-custom.js"></script>
+
+
 </head>
 
 <body>
@@ -136,8 +139,11 @@
 	</div>
 	<!-- /pages-stack -->
 	<button class="menu-button"><span>Menu</span></button>
-	<script src="js/classie.js"></script>
-	<script src="js/main.js"></script>
+
+
+
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
