html and json relode added

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -68,7 +68,7 @@
 		</div>
 		<div class="page" id="page-manuals">
 			<header class="bp-header cf">
-				<h1 class="bp-header__title">Manuals</h1>
+				<h1 class="bp-header__title">Manuals.</h1>
 				<p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
 				<p class="info">
 					"When you adopt a vegan diet we make a connection, you don't go back, it is not a diet, it is a lifestyle." &mdash; Freelee Frugivore
