--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -36,6 +36,7 @@
 			<a class="link link--social link--faded" href="#"><i class="fa fa-youtube-play"></i><span class="text-hidden">YouTube</span></a>
 		</div>
 	</nav>
+
 	<!-- /navigation-->
 	<!-- pages stack -->
 	<div class="pages-stack">
@@ -142,7 +143,7 @@
 
 
 
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
 
 </body>
 
